2004-04-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/gnuplot.texi: Regenerated.

	* docs/gnuplot.doc: Fixed missing leading blanks broken during URL
	updates.

	* docs/Makefile.in ($(srcdir)/gnuplot.texi): Fix missing blank in
	file copying rule.

2004-04-17  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm: Clear all I/O locks when X11_reset is called.
	This is a more generic fix for the problem addressed by the patch
	of 2004-04-13, and covers cases such as a remote X-server failing
	to respond. Even without this patch the connection will eventually
	timeout, but with the patch you can ctrl-C out rather than waiting.

2004-04-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* README: Mention CTAN as a distributor.

2004-04-15  Ethan Merritt  <merritt@u.washington.edu>

	* INSTALL: Give more complete description of the environmental 
	variables GNUPLOT_FONTPATH, GNUPLOT_DEFAULT_GDFONT and GDFONTPATH.

2004-04-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/version.c (gnuplot_date): Raised for yet another tarball.

	* docs/gnuplot.texi: Regenerated.

	* src/show.c (show_version): Updated the splash text another time.

2004-04-15  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS: Updated.

	* README.1ST: Updated.

	* BUGS: Updated.

	* docs/gnuplot.doc: Section "New features" reformatted to 80 chars
	width.

	* docs/gpcard.tex: Updated.

2004-04-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/plot.c (get_user_env): Check $USERPROFILE on Windows, before
	giving up on finding a $HOME.

	* docs/gnuplot.doc (startup, environment): Document the behaviour
	regarding USERPROFILE.

	* docs/gnuplot.texi: Recreated.

2004-04-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* FAQ: Updated for gnuplot 4.0.

	* pm3d/README: Updated.

	* lisp/gpelcard.tex: Corrected "pm3d" instead of "mouse".

2004-04-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
